# routes/index.js
@@ -1,6 +1,8 @@
 const express = require('express');
 const router = express.Router();
 
+router.use('/', require('./auth'));
+
 router.use('/managers', require('./managers'));
 router.use('/employees', require('./employees'));
 router.use('/', require('./swagger'));
