# routes/managers.js
@@ -3,16 +3,26 @@ const router = express.Router();
 const managersController = require('../controllers/managers');
 const validateManager = require('../middleware/validateManager');
 const validateId = require('../middleware/validateId');
+const isAuthenticated = require('../middleware/authenticated');
 
 router.get('/', managersController.getAllManagers);
+
 router.get('/:id', validateId, managersController.getManagerById);
-router.post('/', validateManager, managersController.createManager);
+
+router.post('/',
+  isAuthenticated,
+  validateManager, managersController.createManager);
+
 router.put(
   '/:id',
+  isAuthenticated,
   validateId,
   validateManager,
-  managersController.updateManager
-);
-router.delete('/:id', validateId, managersController.deleteManager);
+  managersController.updateManager);
+
+router.delete('/:id',
+  isAuthenticated,
+  validateId,
+  managersController.deleteManager);
 
 module.exports = router;
